Fixed gallery image display on mobile

--- a/style-gallery.css
+++ b/style-gallery.css
@@ -7,6 +7,7 @@
 	text-align: center;
 }
 
+
 .gallery h2 {
 	margin-top: 40px;
 }
@@ -15,6 +16,7 @@
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
+	overflow: hidden;
 }
 
 .gallery-img img {
@@ -22,13 +24,17 @@
 }
 
 .headshots img {
-	height: 450px;
-	width: 300px;
+	max-height: 450px;
+	max-width: 300px;
+	height: auto;
+	width: auto;
 }
 
 .prod-photos img {
-	width:450px;
-	height: 300px;
+	max-width:450px;
+	max-height: 300px;
+	height: auto;
+	width: auto;
 }
 
 .img-wrap {
@@ -48,4 +54,14 @@
 
 .img-wrap:hover span {
   display: block
+}
+
+@media only screen and (max-width: 520px) {
+	.gallery {
+		padding: 40px 0;
+	}
+
+	.gallery-img img {
+		margin: 20px 0;
+	}
 }
